--- a/src/main/resources/templates/adminpanel/user-form.html
+++ b/src/main/resources/templates/adminpanel/user-form.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col">
-                <h3><span class="material-icons-outlined">admin_panel_settings</span> Create User</h3>
+                <h3><span class="material-icons-outlined">admin_panel_settings</span> Admin Panel / List of Users / Create User</h3>
             </div>
             <div class="col d-flex justify-content-end">
                 <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Users">
