--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -36,6 +36,11 @@
                 <i class="material-icons-outlined md-36">dashboard</i>
             </a>
         </li>
+        <li class="nav-item">
+            <a th:href="@{/contacts/list}" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="right" title="Staff">
+                <i class="material-icons-outlined md-36">people</i>
+            </a>
+        </li>
     </ul>
 
     <ul class="nav flex-column bg-white mb-0 bottom align-items-center">
