--- a/src/main/resources/templates/errors/error-???.html
+++ b/src/main/resources/templates/errors/error-???.html
@@ -11,12 +11,12 @@
     <div th:replace="layout :: vertical_navbar"></div>
 
     <div class="page-content p-5">
-        <div class="container-fluid">
+        <div class="">
 
             <h3 style="color: red"><span class="material-icons-outlined">report</span> ??? | What was it?!</h3>
             <hr>
             <p>
-                We have no idea what happened her... <span sec:authentication="principal.username">User</span>
+                We have no idea what happened her...
             </p>
             <hr>
 
