--- a/src/main/resources/templates/adminpanel/list-users.html
+++ b/src/main/resources/templates/adminpanel/list-users.html
@@ -11,10 +11,10 @@
 <div th:replace="layout :: vertical_navbar"></div>
 
 <div class="page-content p-5">
-    <div class="container-fluid">
+    <div class="">
         <div class="row">
             <div class="col">
-                <h3><span class="material-icons-outlined">admin_panel_settings</span> Admin Panel / List of Users</h3>
+                <h3><span class="material-icons-outlined align-baseline">admin_panel_settings</span> Admin Panel / List of Users</h3>
             </div>
             <div class="col d-flex justify-content-end">
                 <a th:href="@{/adminpanel/users/addUser}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New User">
@@ -26,10 +26,10 @@
         </div>
         <hr>
         <p>
-            Welcome Back <span sec:authentication="principal.username"> Admin </span>!
+            Welcome Back <span sec:authentication="principal.username"></span>!
         </p>
         <hr>
-        <table class="table table-striped table-hover">
+        <table class="table table-sm table-striped table-hover">
             <caption>List of users</caption>
             <thead>
             <tr>
