--- a/src/main/resources/templates/adminpanel/user-form.html
+++ b/src/main/resources/templates/adminpanel/user-form.html
@@ -11,7 +11,7 @@
 <div th:replace="layout :: vertical_navbar"></div>
 
 <div class="page-content p-5">
-    <div class="container-fluid">
+    <div class="">
         <div class="row">
             <div class="col">
                 <h3><span class="material-icons-outlined">admin_panel_settings</span> Admin Panel / List of Users / Create User</h3>
@@ -23,7 +23,7 @@
         </div>
         <hr>
         <p>
-            Welcome Back <span sec:authentication="principal.username"> Admin </span>!
+            Welcome Back <span sec:authentication="principal.username"></span>!
         </p>
         <hr>
     </div>
