--- a/src/main/resources/templates/contacts/list-contacts.html
+++ b/src/main/resources/templates/contacts/list-contacts.html
@@ -11,7 +11,7 @@
 <div th:replace="layout :: vertical_navbar"></div>
 
 <div class="page-content p-5">
-    <div class="container-fluid">
+    <div class="">
         <div class="row">
             <div class="col">
                 <h3><span class="material-icons-outlined">people</span> Contacts</h3>
@@ -26,10 +26,10 @@
         </div>
         <hr>
         <p>
-            Welcome Back <span sec:authentication="principal.username"> Admin </span>!
+            Welcome Back <span sec:authentication="principal.username"></span>!
         </p>
         <hr>
-        <table class="table table-striped table-hover">
+        <table class="table table-sm table-striped table-hover">
             <caption>List of Contacts</caption>
             <thead>
             <tr>
