--- a/src/main/resources/templates/errors/error-403.html
+++ b/src/main/resources/templates/errors/error-403.html
@@ -11,12 +11,12 @@
     <div th:replace="layout :: vertical_navbar"></div>
 
     <div class="page-content p-5">
-        <div class="container-fluid">
+        <div class="">
 
             <h3 style="color: red"><span class="material-icons-outlined">privacy_tip</span> 403 | Access Denied</h3>
             <hr>
             <p>
-                You don't have permission to access this page <span sec:authentication="principal.username">User</span>
+                You don't have permission to access this page <span sec:authentication="principal.username"></span>
             </p>
             <hr>
 
