--- a/src/main/resources/templates/errors/error-404.html
+++ b/src/main/resources/templates/errors/error-404.html
@@ -11,7 +11,7 @@
     <div th:replace="layout :: vertical_navbar"></div>
 
     <div class="page-content p-5">
-        <div class="container-fluid">
+        <div class="">
 
             <h3 style="color: red"><span class="material-icons-outlined">search_off</span> 404 | Page Not Found</h3>
             <hr>
