--- a/src/main/resources/templates/adminpanel/list-users.html
+++ b/src/main/resources/templates/adminpanel/list-users.html
@@ -46,6 +46,10 @@
                     <th scope="col">Role</th>
                     <th scope="col">Enabled</th>
                     <th scope="col">Assigned to...</th>
+                    <th scope="col">Create Date</th>
+                    <th scope="col">Created By</th>
+                    <th scope="col">Update Date</th>
+                    <th scope="col">Updated By</th>
                     <th scope="col">Action</th>
                 </tr>
             </thead>
@@ -57,6 +61,10 @@
                     <td th:text="${users.role}"></td>
                     <td th:text="${users.enabled}"></td>
                     <td th:text="${users.employee}"></td>
+                    <td th:text="${users.createdDate}"></td>
+                    <td th:text="${users.createdBy}"></td>
+                    <td th:text="${users.lastModifiedDate}"></td>
+                    <td th:text="${users.lastModifiedBy}"></td>
                     <td>
                         <a th:href="@{/adminpanel/users/update(id=${users.userId})}" class="btn btn-link editBtn"
                            data-bs-toggle="tooltip"
