--- a/src/main/resources/templates/adminpanel/adminpanel.html
+++ b/src/main/resources/templates/adminpanel/adminpanel.html
@@ -22,7 +22,7 @@
 
         <hr>
         <p>
-            Welcome Back <span sec:authentication="principal.username"></span>!
+            Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
         </p>
         <hr>
     </div>
