--- a/src/main/resources/templates/contacts/list-contacts.html
+++ b/src/main/resources/templates/contacts/list-contacts.html
@@ -23,7 +23,7 @@
         </div>
         <hr>
         <p>
-            Welcome Back <span sec:authentication="principal.username"></span>!
+            Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
         </p>
         <hr>
         <table class="table table-sm table-striped table-hover">
