--- a/src/main/resources/templates/contacts/contact-form.html
+++ b/src/main/resources/templates/contacts/contact-form.html
@@ -20,7 +20,7 @@
         </div>
         <hr>
         <p>
-            Welcome Back <span sec:authentication="principal.username"></span>!
+            Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
         </p>
         <hr>
         <div>
