--- a/src/main/resources/templates/main/dashboard.html
+++ b/src/main/resources/templates/main/dashboard.html
@@ -16,7 +16,7 @@
             <h3><span class="material-icons-outlined">dashboard</span> Dashboard</h3>
             <hr>
             <p>
-                Welcome Back <span sec:authentication="principal.username"></span>!
+                Welcome Back <span sec:authentication="principal.username" style="font-weight: bold"></span>!
             </p>
             <hr>
 
