--- a/src/main/resources/templates/adminpanel/adminpanel.html
+++ b/src/main/resources/templates/adminpanel/adminpanel.html
@@ -14,7 +14,7 @@
         <div class="row">
             <h3><span class="material-icons-outlined">admin_panel_settings</span> Admin Panel</h3>
             <div class="col d-flex justify-content-end">
-                <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Users">
+                <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-toggle="tooltip" data-placement="top" title="List Users">
                     <i class="material-icons-outlined md-36">list</i>
                 </a>
             </div>
