--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -34,12 +34,12 @@
 
     <ul class="nav flex-column bg-white mb-0 align-items-center">
         <li class="nav-item">
-            <a th:href="@{/}" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="right" title="Dashboard">
+            <a th:href="@{/}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Dashboard">
                 <i class="material-icons-outlined md-36">dashboard</i>
             </a>
         </li>
         <li class="nav-item">
-            <a th:href="@{/contacts/list}" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="right" title="Contacts">
+            <a th:href="@{/contacts/list}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Contacts">
                 <i class="material-icons-outlined md-36">people</i>
             </a>
         </li>
@@ -47,17 +47,17 @@
 
     <ul class="nav flex-column bg-white mb-0 bottom align-items-center">
         <li class="nav-item">
-            <a href="#" class="nav-link disabled" data-bs-toggle="tooltip" data-bs-placement="right" title="Get help">
+            <a href="#" class="nav-link disabled" data-toggle="tooltip" data-placement="right" title="Get help">
                 <i class="material-icons-outlined md-36">help_outline</i>
             </a>
         </li>
         <li class="nav-item">
-            <a th:href="@{/adminpanel}" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="right" title="Admin Panel">
+            <a th:href="@{/adminpanel}" class="nav-link" data-toggle="tooltip" data-placement="right" title="Admin Panel">
                 <i class="material-icons-outlined md-36">admin_panel_settings</i>
             </a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="right" title="Settings">
+            <a href="#" class="nav-link" data-toggle="tooltip" data-placement="right" title="Settings">
                 <i class="material-icons-outlined md-36">settings</i>
             </a>
         </li>
