--- a/src/main/resources/templates/adminpanel/list-users.html
+++ b/src/main/resources/templates/adminpanel/list-users.html
@@ -16,12 +16,12 @@
             <div class="col d-flex justify-content-end">
 
                 <!-- Modal to Create New User -->
-                <a  class="btn btn-link newBtn" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New User">
+                <a  class="btn btn-link newBtn" data-toggle="tooltip" data-placement="top" title="Add New User">
                     <i class="material-icons-outlined md-36">person_add</i>
                 </a>
 
                 <!-- Refresh User List -->
-                <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Users">
+                <a th:href="@{/adminpanel/users/list}" class="btn btn-link" data-toggle="tooltip" data-placement="top" title="List Users">
                     <i class="material-icons-outlined md-36">list</i>
                 </a>
             </div>
@@ -67,10 +67,10 @@
                     <td th:text="${users.lastModifiedBy}"></td>
                     <td>
                         <a th:href="@{/adminpanel/users/update(id=${users.userId})}" class="btn btn-link editBtn"
-                           data-bs-toggle="tooltip"
-                           data-bs-placement="top" title="Update User"><i class="material-icons-outlined">edit</i></a>
+                           data-toggle="tooltip"
+                           data-placement="top" title="Update User"><i class="material-icons-outlined">edit</i></a>
                         <a th:href="@{/adminpanel/users/delete(id=${users.userId})}" class="btn btn-link"
-                           style="color: red" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete User"
+                           style="color: red" data-toggle="tooltip" data-placement="top" title="Delete User"
                            onclick="if (!(confirm('Are you sure you want to delete this user?'))) return false">
                             <i class="material-icons-outlined">delete</i>
                         </a>
@@ -124,10 +124,10 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button class="btn btn-link float-right" type="submit" data-bs-toggle="tooltip" data-bs-placement="top" title="Save">
+                                <button class="btn btn-link float-right" type="submit" data-toggle="tooltip" data-placement="top" title="Save">
                                     <i class="material-icons-outlined md-36">save_alt</i>
                                 </button>
-                                <button type="button" class="btn btn-link" data-dismiss="modal" data-bs-toggle="tooltip" data-bs-placement="top" title="Close">
+                                <button type="button" class="btn btn-link" data-dismiss="modal" data-toggle="tooltip" data-placement="top" title="Close">
                                     <i class="material-icons-outlined md-36">close</i>
                                 </button>
                             </div>
@@ -182,10 +182,10 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button class="btn btn-link float-right" type="submit" data-bs-toggle="tooltip" data-bs-placement="top" title="Save">
+                                <button class="btn btn-link float-right" type="submit" data-toggle="tooltip" data-placement="top" title="Save">
                                     <i class="material-icons-outlined md-36">save_alt</i>
                                 </button>
-                                <button type="button" class="btn btn-link" data-dismiss="modal" data-bs-toggle="tooltip" data-bs-placement="top" title="Close">
+                                <button type="button" class="btn btn-link" data-dismiss="modal" data-toggle="tooltip" data-placement="top" title="Close">
                                     <i class="material-icons-outlined md-36">close</i>
                                 </button>
                             </div>
