--- a/src/main/resources/templates/contacts/list-contacts.html
+++ b/src/main/resources/templates/contacts/list-contacts.html
@@ -14,9 +14,9 @@
         <div class="row">
             <h3><span class="material-icons-outlined">people</span> Contacts</h3>
             <div class="col d-flex justify-content-end">
-                <a th:href="@{/contacts/addContact}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="Add New Contact">
+                <a th:href="@{/contacts/addContact}" class="btn btn-link" data-toggle="tooltip" data-placement="top" title="Add New Contact">
                     <i class="material-icons-outlined md-36">person_add</i></a>
-                <a th:href="@{/contacts/list}" class="btn btn-link" data-bs-toggle="tooltip" data-bs-placement="top" title="List Contacts">
+                <a th:href="@{/contacts/list}" class="btn btn-link" data-toggle="tooltip" data-placement="top" title="List Contacts">
                     <i class="material-icons-outlined md-36">list</i>
                 </a>
             </div>
@@ -47,10 +47,10 @@
                 <td th:text="${tempContacts.contactEmail}"></td>
                 <td>
                     <a th:href="@{/employees/update(id=${tempContacts.contactId})}" class="btn btn-link"
-                       data-bs-toggle="tooltip" data-bs-placement="top" title="Update User">
+                       data-toggle="tooltip" data-placement="top" title="Update User">
                         <i class="material-icons-outlined">edit</i></a>
                     <a th:href="@{/employees/delete(id=${tempContacts.contactId})}" class="btn btn-link"
-                       style="color: red" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete User"
+                       style="color: red" data-toggle="tooltip" data-placement="top" title="Delete User"
                        onclick="if (!(confirm('Are you sure you want to delete this Contact?'))) return false">
                         <i class="material-icons-outlined">delete</i>
                     </a>
