--- a/src/main/resources/templates/errors/error-405.html
+++ b/src/main/resources/templates/errors/error-405.html
@@ -3,11 +3,11 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="layout :: head"></head>
+<head th:replace="fragments/layout :: head"></head>
 <title>Not Found</title>
 <body>
 
-    <div th:replace="layout :: vertical_navbar"></div>
+    <div th:replace="fragments/layout :: vertical_navbar"></div>
 
     <div class="page-content p-5">
         <h3 style="color: red"><span class="material-icons-outlined">search_off</span> 404 | Method Not Allowed</h3>
